# lib/db/src/schema/index.ts
@@ -12,3 +12,4 @@ export * from "./comments";
 export * from "./pageViews";
 export * from "./series";
 export * from "./media";
+export * from "./siteSettings";
